# agent-ops

./: .env.example  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-06-28-智能告警平台-design-v2.md  2026-06-28-智能告警平台-phase1-implementation.md  2026-06-28-智能告警平台-phase2-design.md  2026-06-28-智能告警平台-phase2-implementation.md  2026-06-29-智能告警平台-phase3-design.md  2026-06-29-智能告警平台-phase3-implementation.md  2026-06-29-智能告警平台-phase4-design.md  2026-06-29-智能告警平台-phase4-implementation.md
scripts/: diagnose.py  seed_incidents.py
src/: config.py
src/agent/: checkpointer.py  context.py  diagnosis.py  graph.py  resilience.py  state.py  tools.py
src/api/: dependencies.py  main.py  routes.py
src/auth/: token_service.py
src/chatops/: notifier.py  routes.py
src/conversation/: models.py  repository.py
src/execution/: action_tools.py  approval.py  audit.py  k8s_executor.py  policy.py  rollback.py
src/infra/: database.py  es_client.py  kafka_client.py  (+1 more)
tests/: test_action_tools.py  test_adapters.py  test_agent_checkpointer.py  test_agent_context.py  test_agent_graph.py  test_agent_resilience.py  test_agent_tools.py  test_agent_worker.py  test_aggregator.py  test_api.py  test_api_auth.py  test_approval.py  test_audit.py  test_auth.py  test_conversation.py  test_database.py  test_es_client.py  test_incident_store.py  test_k8s_executor.py  test_k8s_syncer.py  test_kafka_client.py  test_log_search.py  test_milvus_client.py  test_monitoring.py  test_neo4j_client.py  test_notifier.py  test_orchestrator.py  test_policy.py  test_tools_registry.py
(+16 files in other folders)
